fix: Spacing between buttons on success page

--- a/src/features/Checkout/checkout.module.styl
+++ b/src/features/Checkout/checkout.module.styl
@@ -130,7 +130,7 @@ header.view-header
 .success-buttons
   a
     +$below(md)
-      margin 0 auto
+      margin 10px auto
 
 .confirm
   header
